<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hello Android</string>
    <string name="access1">Colorful Udacity Logo</string>
    <string name="access2">Udacity Icon</string>
    <string name="udacity" translatable="false">Udacity</string>
    <string name="addressl">2465 Latham St * Mountain View, CA 94043</string>
    <string name="addressp">2465 Latham St \nMountain View, CA 94043</string>
    <string name="url" translatable="false"><a href="http://www.udacity.com">www.udacity.com</a></string>
    <string name="info">Udacity is a for-profit educational organization founded by Sebastian Thrun, David Stavens,
        and Mike Sokolsky offering massive open online courses</string>
    <string name="phone">(650)555–5555</string>
</resources>
