<?xml version="1.0" encoding="utf-8"?><!-- @string/info from Wikipedia short description -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        style="@style/MainImage"
        android:contentDescription="@string/access1" />

    <TextView
        style="@style/HeadStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/TextStyle"
            android:autoLink="map"
            android:drawableLeft="@drawable/ic_loc"
            android:drawableStart="@drawable/ic_loc"
            android:text="@string/addressp" />

        <TextView
            style="@style/TextStyle"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            android:text="@string/phone" />

        <TextView
            style="@style/TextStyle"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_lang"
            android:drawableStart="@drawable/ic_lang"
            android:text="@string/url" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        android:layout_marginTop="@dimen/margin2"
        android:layout_weight="2"
        android:paddingLeft="@dimen/pad"
        android:paddingRight="@dimen/pad"
        android:text="@string/info"
        android:textSize="@dimen/text" />

    <ImageView
        style="@style/IconImage"
        android:contentDescription="@string/access2" />

</LinearLayout>
